[gd_scene load_steps=2 format=3 uid="uid://b3875bcb4523n"]

[ext_resource type="Script" path="res://objects/ui/elements/new_level_panel/new_level_panel.gd" id="1_ooc4q"]

[node name="NewLevelPanel" type="Control"]
custom_minimum_size = Vector2(556, 168)
layout_mode = 3
anchors_preset = 0
offset_right = 556.0
offset_bottom = 168.0
script = ExtResource("1_ooc4q")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Create New Level"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Import New Level"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
